--- a/package.json
+++ b/package.json
@@ -12,48 +12,50 @@
     "@expo-google-fonts/archivo": "^0.2.0",
     "@expo-google-fonts/inter": "^0.2.0",
     "@nozbe/watermelondb": "^0.24.0",
-    "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-native-masked-view/masked-view": "0.2.5",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
-    "expo": "~41.0.1",
-    "expo-app-loading": "^1.2.1",
-    "expo-font": "~9.1.0",
-    "expo-splash-screen": "~0.10.2",
-    "expo-updates": "~0.5.4",
-    "lottie-react-native": "3.5.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "expo": "^43.0.0",
+    "expo-app-loading": "~1.2.1",
+    "expo-font": "~10.0.3",
+    "expo-splash-screen": "~0.13.5",
+    "expo-updates": "~0.10.13",
+    "lottie-react-native": "4.0.3",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-calendars": "^1.1274.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
-    "react-native-svg": "12.1.0",
-    "react-native-unimodules": "~0.13.3",
-    "react-native-web": "~0.13.12",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "0.17.1",
     "styled-components": "^5.3.3",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-status-bar": "~1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-decorators": "^7.16.7",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "@types/react-native-calendars": "^1.1264.3",
     "@types/styled-components-react-native": "^5.1.3",
-    "babel-preset-expo": "~8.3.0",
-    "jest-expo": "~41.0.0",
+    "babel-preset-expo": "8.5.1",
+    "jest-expo": "~43.0.1",
     "react-native-svg-transformer": "^0.14.3",
-    "typescript": "~4.0.0"
+    "typescript": "~4.3.5"
   },
   "jest": {
     "preset": "react-native"
   },
-  "private": true
+  "private": true,
+  "name": "rentx",
+  "version": "1.0.0"
 }
