--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "expo": "^43.0.0",
     "expo-app-loading": "~1.2.1",
     "expo-font": "~10.0.3",
+    "expo-image-picker": "~11.0.3",
     "expo-splash-screen": "~0.13.5",
+    "expo-status-bar": "~1.1.0",
     "expo-updates": "~0.10.13",
     "lottie-react-native": "4.0.3",
     "react": "17.0.1",
@@ -37,8 +39,7 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3",
-    "yup": "^0.32.11",
-    "expo-status-bar": "~1.1.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
